--- a/echtzeit_gewahrer_statischer_binaeruebersetzer/Makefile
+++ b/echtzeit_gewahrer_statischer_binaeruebersetzer/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CFLAGS=-Wall -g -DAVR -DWCET
 RM=rm
 
-translator: translator.c 6502_instructions_optimization_avr.c 6502_instructions.h
+translator: translator.c 6502_instructions_avr.c 6502_instructions.h
 	$(CC) $(CFLAGS) -o $@ $^
 
 clean:
