--- a/echtzeit_gewahrer_statischer_binaeruebersetzer/Makefile
+++ b/echtzeit_gewahrer_statischer_binaeruebersetzer/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-Wall -g -DC -DWCET
+CFLAGS=-Wall -g -DC -DWCET -DOPTIMIZATION
 RM=rm
 
 translator: translator.c 6502_instructions_c.c 6502_instructions.h
